--- a/_includes/header.html
+++ b/_includes/header.html
@@ -44,8 +44,10 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                <div class="intro-lead-in">Hi!I'm Akash Jain</div>
+                <div class="intro-lead-in">Hi! I'm Akash Jain</div>
                 <div class="intro-heading">Software Developer</div>
+                <div class="intro-heading">Passionate</div>
+                <div class="intro-heading">And Desicated Team Member</div>
                 <a href="#services" class="page-scroll btn btn-xl">Tell Me More</a>
             </div>
         </div>
