--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -300,6 +300,15 @@ header .intro-text .intro-heading {
     line-height: 50px;
 }
 
+header .intro-text .intro-heading-v2 {
+    margin-bottom: 25px;
+    text-transform: uppercase;
+    font-family: {{ site.data.template.font.primary }};
+    font-size: 32px;
+    font-weight: 700;
+    line-height: 32px;
+}
+
 @media(min-width:768px) {
     header .intro-text {
         padding-top: 300px;
