--- a/_includes/header.html
+++ b/_includes/header.html
@@ -44,6 +44,7 @@
     <header>
         <div class="container">
             <div class="intro-text">
+				</div><img class="img-circle img-responsive" src="img/about/1.jpg" alt=""></div>
                 <div class="intro-lead-in">Hi! I'm Akash Jain</div>
                 <div class="intro-heading-v2">Software Developer</div>
                 <a href="#services" class="page-scroll btn btn-xl">Tell Me More</a>
