--- a/_includes/header.html
+++ b/_includes/header.html
@@ -44,8 +44,10 @@
     <header>
         <div class="container">
             <div class="intro-text">
-				<div class="timeline-image">
-					<img class="img-circle img-responsive" src="img/team/profile_pic.jpg" alt="">
+				<div class="container">
+					<div class="timeline-image">
+						<img class="img-circle img-responsive" src="img/team/profile_pic.jpg" alt="">
+					</div>
 				</div>
                 <div class="intro-lead-in">Hi! I'm Akash Jain</div>
                 <div class="intro-heading-v2">Software Developer</div>
