--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -309,6 +309,20 @@ header .intro-text .intro-heading-v2 {
     line-height: 40px;
 }
 
+header .intro-text .timeline-image {
+    z-index: 100;
+    position: absolute;
+    width: 80px;
+    height: 80px;
+    margin-left: auto;
+    margin-right: auto;
+    border: 7px solid #f1f1f1;
+    border-radius: 100%;
+    text-align: center;
+    color: #fff;
+    background-color: #{{ site.data.template.color.primary }};
+}
+
 @media(min-width:768px) {
     header .intro-text {
         padding-top: 300px;
