--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -314,8 +314,7 @@ header .intro-text .timeline-image {
     position: absolute;
     width: 225px;
     height: 225px;
-    margin-left: auto;
-    margin-right: auto;
+    margin-bottom: 25px;
     border: 1px solid #f1f1f1;
     border-radius: 100%;
     text-align: center;
