--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -281,6 +281,7 @@ header {
 header .intro-text {
     padding-top: 100px;
     padding-bottom: 50px;
+    text-align: center;
 }
 
 header .intro-text .intro-lead-in {
@@ -310,8 +311,6 @@ header .intro-text .intro-heading-v2 {
 }
 
 header .intro-text .timeline-image {
-    z-index: 100;
-    position: absolute;
     width: 225px;
     height: 225px;
     margin-bottom: 25px;
