--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -345,19 +345,26 @@ header .intro-text .timeline-image {
         line-height: 75px;
     }
 	
+	header .intro-text .intro-heading-v2 {
+		margin-bottom: 25px;
+		text-transform: uppercase;
+		font-family: {{ site.data.template.font.primary }};
+		font-size: 60px;
+		font-weight: 700;
+		line-height: 60px;
+	}
 	
 	header .intro-text .timeline-image {
 		width: 225px;
 		height: 225px;
 		border: 2px solid #f1f1f1;
 		border-radius: 100%;
-		margin-bottom: 25px;
+		margin-bottom: 45px;
 		color: #fff;
 		display: block;
 		margin: 0 auto;
 		font-weight: 700;
 		background-color: #{{ site.data.template.color.primary }};
-        margin-bottom: 50px;
 	}
 }
 
