--- a/_includes/header.html
+++ b/_includes/header.html
@@ -47,7 +47,7 @@
 				<div class="timeline-image">
 					<img class="img-circle img-responsive" src="img/team/profile_pic.jpg" alt="">
 				</div>
-                <div class="intro-lead-in">Hi! I'm Akash Jain</div>
+                <div class="intro-lead-in">Akash Jain</div>
                 <div class="intro-heading-v2">Software Developer</div>
                 <a href="#services" class="page-scroll btn btn-xl">Tell Me More</a>
             </div>
