centralize image(main)

--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -316,6 +316,8 @@ header .intro-text .timeline-image {
     border-radius: 100%;
     margin-bottom: 25px;
     color: #fff;
+	display: block;
+	margin: 0 auto;
     font-weight: 700;
     background-color: #{{ site.data.template.color.primary }};
 }
@@ -359,6 +361,8 @@ header .intro-text .timeline-image {
 		border-radius: 100%;
 		margin-bottom: 45px;
 		color: #fff;
+		display: block;
+		margin: 0 auto;
 		font-weight: 700;
 		background-color: #{{ site.data.template.color.primary }};
 	}
