--- a/_includes/header.html
+++ b/_includes/header.html
@@ -48,7 +48,7 @@
 					<img class="img-circle img-responsive" src="img/team/profile_pic.jpg" alt="">
 				</div>
                 <div class="intro-lead-in">Akash Jain</div>
-                <div class="intro-heading-v2">Software Developer</div>
+                <div class="intro-heading-v2">Lead Software Developer</div>
                 <a href="#services" class="page-scroll btn btn-xl">Tell Me More</a>
             </div>
         </div>
@@ -58,4 +58,3 @@
           {% if page.title %}<a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>{% endif %}
         {% endfor %}
  -->
-
