--- a/_includes/about.html
+++ b/_includes/about.html
@@ -46,11 +46,13 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>December 2012</h4>
-                                    <h4 class="subheading">Transition to Full Service</h4>
+                                    <h4>July'12 - July'16</h4>
+                                    <h4 class="subheading">Manipal Institute of Technology</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted">B. Tech.</p>
+                                    <p class="text-muted">Computer Science</p>
+                                    <p class="text-muted">CGPA: 8.45</p>
                                 </div>
                             </div>
                         </li>
