--- a/_includes/about.html
+++ b/_includes/about.html
@@ -50,7 +50,7 @@
                                     <h4 class="subheading">Manipal Institute of Technology</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">B. Tech.</p>
+                                    <p class="text-muted">Bachelor of Technology</p>
                                     <p class="text-muted">Computer Science</p>
                                     <p class="text-muted">CGPA: 8.45</p>
                                 </div>
@@ -62,12 +62,26 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>July 2014</h4>
-                                    <h4 class="subheading">Phase Two Expansion</h4>
+                                    <h4>2010 - 2012</h4>
+                                    <h4 class="subheading">Senior Secondary(XII)</h4>
                                 </div>
-                                <div class="timeline-body">
+                                <!-- <div class="timeline-body">
                                     <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                </div> -->
+                            </div>
+                        </li>
+                        <li class="timeline-inverted">
+                            <div class="timeline-image">
+                                <img class="img-circle img-responsive" src="img/about/4.jpg" alt="">
+                            </div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h4>Before 2012</h4>
+                                    <h4 class="subheading">Metric (X)</h4>
                                 </div>
+                                <!-- <div class="timeline-body">
+                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                </div> -->
                             </div>
                         </li>
                         <li class="timeline-inverted">
