--- a/_includes/about.html
+++ b/_includes/about.html
@@ -63,25 +63,25 @@
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
                                     <h4>2010 - 2012</h4>
-                                    <h4 class="subheading">Senior Secondary(XII)</h4>
+                                    <h4 class="subheading">St. Joseph's School</h4>
                                 </div>
-                                <!-- <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
-                                </div> -->
+                                <div class="timeline-body">
+                                    <p class="text-muted">Senior Secondary(XII)</p>
+                                </div>
                             </div>
                         </li>
-                        <li class="timeline-inverted">
+                        <li>
                             <div class="timeline-image">
                                 <img class="img-circle img-responsive" src="img/about/4.jpg" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
                                     <h4>Before 2012</h4>
-                                    <h4 class="subheading">Metric (X)</h4>
+                                    <h4 class="subheading">St. Joseph's School</h4>
                                 </div>
-                                <!-- <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
-                                </div> -->
+                                <div class="timeline-body">
+                                    <p class="text-muted">Metric (X)</p>
+                                </div>
                             </div>
                         </li>
                         <li class="timeline-inverted">
