--- a/_includes/about.html
+++ b/_includes/about.html
@@ -10,7 +10,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <ul class="timeline">
-                        <li>
+                        <li class="timeline-inverted">
                             <div class="timeline-image">
                                 <img class="img-circle img-responsive" src="img/about/1.jpg" alt="">
                             </div>
@@ -20,11 +20,30 @@
                                     <h4 class="subheading">Samsung R&D institue, Delhi</h4>
                                 </div>
                                 <div class="timeline-body">
+                                    <p class="text-muted">Designation: Lead Engineer</p>
                                     <p class="text-muted">Creating an automated intelligent assistant to help the customers get faster and more accurate responses to their queries related to Samsung devices.</p>
-									<p class="text-muted">Created a python based spell corrector for Samsung chatbot. It analyses the user’s query, corrects the mis-spelled words and overtime trains itself too to give a better and accurate response to the queries.</p>
+				                            <p class="text-muted">Created a python based spell corrector for Samsung chatbot. It analyses the user’s query, corrects the mis-spelled words and overtime trains itself too to give a better and accurate response to the queries.</p>
                                 </div>
                             </div>
                         </li>
+                            <li>
+                                <div class="timeline-image">
+                                    <img class="img-circle img-responsive" src="img/about/1.jpg" alt="">
+                                </div>
+                                <div class="timeline-panel">
+                                    <div class="timeline-heading">
+                                        <h4>July'16 - Present</h4>
+                                        <h4 class="subheading">Samsung R&D institue, Delhi</h4>
+                                    </div>
+                                    <div class="timeline-body">
+                                        <p class="text-muted">Designation: Engineer</p>
+                                        <p class="text-muted">Worked on an AI based Conversational Agent designed to help the customers with their queries related to Samsung products.</p>
+                                        <p class="text-muted">Contributed towards a <b>Log-Analytics Dashboard</b> development to gain insight into the conversation flows and enhance the chatbot’s effectiveness.</p>
+                                        <p class="text-muted">Worked on extracting <b>Key Phrases</b> from user utterances for automated evaluation of the intent classifier.</p>
+                                        <p class="text-muted">Created a <b>Spell Corrector</b> for correcting misspelled words in user queries while taking context into consideration.</p>
+                                    </div>
+                                </div>
+                            </li>
                         <li class="timeline-inverted">
                             <div class="timeline-image">
                                 <img class="img-circle img-responsive" src="img/about/2.jpg" alt="">
@@ -86,8 +105,8 @@
                         </li>
                         <li class="timeline-inverted">
                             <div class="timeline-image">
-                                <h4>Be Part
-                                    <br>Of Our
+                                <h4>Start of
+                                    <br>My
                                     <br>Story!</h4>
                             </div>
                         </li>
