--- a/_includes/about.html
+++ b/_includes/about.html
@@ -38,14 +38,11 @@
                                     <div class="timeline-body">
                                         <p class="text-muted">Designation: Engineer</p>
                                         <ul>
+                                          Worked on an AI based Conversational Agent designed to help the customers with their queries related to Samsung products.
                                           <li>Contributed towards a <b>Log-Analytics Dashboard</b> development to gain insight into the conversation flows and enhance the chatbot’s effectiveness.</li>
                                           <li>Worked on extracting <b>Key Phrases</b> from user utterances for automated evaluation of the intent classifier.</li>
                                           <li>Created a <b>Spell Corrector</b> for correcting misspelled words in user queries while taking context into consideration.</li>
                                         </ul>
-                                        <p class="text-muted">Worked on an AI based Conversational Agent designed to help the customers with their queries related to Samsung products.</p>
-                                        <p class="text-muted">Contributed towards a <b>Log-Analytics Dashboard</b> development to gain insight into the conversation flows and enhance the chatbot’s effectiveness.</p>
-                                        <p class="text-muted">Worked on extracting <b>Key Phrases</b> from user utterances for automated evaluation of the intent classifier.</p>
-                                        <p class="text-muted">Created a <b>Spell Corrector</b> for correcting misspelled words in user queries while taking context into consideration.</p>
                                     </div>
                                 </div>
                             </li>
