--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -590,7 +590,7 @@ section h3.section-subheading {
 }
 
 .timeline .timeline-body>ul {
-    text-align: : left !important;
+    text-align: left !important;
 }
 
 @media(min-width:768px) {
