--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -526,7 +526,7 @@ section h3.section-subheading {
 
 .timeline>li .timeline-panel:before {
     right: auto;
-    left: -15px;
+    /* left: -15px; */
     border-right-width: 15px;
     border-left-width: 0;
 }
