--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -685,7 +685,7 @@ section h3.section-subheading {
     }
 
     .timeline>li .timeline-panel {
-        padding: 0 20px 20px 100px;
+        /* padding: 0 20px 20px 100px; */
     }
 
     .timeline>li .timeline-image {
