--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -568,7 +568,7 @@ section h3.section-subheading {
 
 .timeline>li.timeline-inverted>.timeline-panel {
     float: right;
-    padding: 0 20px 0 100px;
+    /* padding: 0 20px 0 100px; */
     text-align: left;
 }
 
@@ -685,7 +685,7 @@ section h3.section-subheading {
     }
 
     .timeline>li .timeline-panel {
-        /* padding: 0 20px 20px 100px; */
+        padding: 0 20px 20px 100px;
     }
 
     .timeline>li .timeline-image {
