--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -648,7 +648,7 @@ section h3.section-subheading {
 
     .timeline>li.timeline-inverted>.timeline-panel {
         float: right;
-        padding: 0 30px 20px 20px;
+        /* padding: 0 30px 20px 20px; */
         text-align: left;
     }
 }
