--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -659,7 +659,7 @@ section h3.section-subheading {
     }
 
     .timeline>li .timeline-panel {
-        padding: 0 20px 20px;
+        /* padding: 0 20px 20px; */
     }
 
     .timeline>li .timeline-image {
@@ -675,7 +675,7 @@ section h3.section-subheading {
     }
 
     .timeline>li.timeline-inverted>.timeline-panel {
-        padding: 0 20px 20px;
+        /* padding: 0 20px 20px; */
     }
 }
 
