--- a/_includes/header.html
+++ b/_includes/header.html
@@ -48,7 +48,20 @@
 					<img class="img-circle img-responsive" src="img/team/profile_pic.jpg" alt="">
 				</div>
                 <div class="intro-lead-in">Akash Jain</div>
-                <div class="intro-heading-v2">Lead Software Developer</div>
+                <div class="intro-heading-v2">Lead Software Developer
+                  <ul class="list-inline my-social-buttons">
+                      <li>
+                          <a href="#">
+                              <i class="fa fa-facebook"></i>
+                          </a>
+                      </li>
+                      <li>
+                          <a href="#">
+                              <i class="fa fa-linkedin"></i>
+                          </a>
+                      </li>
+                  </ul>
+                </div>
                 <a href="#services" class="page-scroll btn btn-xl">Tell Me More</a>
             </div>
         </div>
