--- a/_includes/header.html
+++ b/_includes/header.html
@@ -49,14 +49,14 @@
 				</div>
                 <div class="intro-lead-in">Akash Jain</div>
                 <div class="intro-heading-v2">Lead Software Developer
-                  <ul class="list-inline my-social-buttons">
+                  <ul class="list-inline social-buttons">
                       <li>
-                          <a href="#">
+                          <a href="#" class="facebook">
                               <i class="fa fa-facebook"></i>
                           </a>
                       </li>
                       <li>
-                          <a href="#">
+                          <a href="#" class="linkedin">
                               <i class="fa fa-linkedin"></i>
                           </a>
                       </li>
