--- a/_includes/team.html
+++ b/_includes/team.html
@@ -17,7 +17,7 @@
                         <ul class="list-inline social-buttons">
                             {% for network in member.social %}
                             <li>
-                                <a href="{{ network.url }}">
+                                <a href="{{ network.url }}" class="{{ network.title }}">
                                     <i class="fa fa-{{ network.title }}"></i>
                                 </a>
                             </li>
