--- a/_includes/header.html
+++ b/_includes/header.html
@@ -56,7 +56,7 @@
                           </a>
                       </li>
                       <li>
-                          <a href="#" class="linkedin">
+                          <a href="https://www.linkedin.com/in/akash0212/" target="_blank" class="linkedin">
                               <i class="fa fa-linkedin"></i>
                           </a>
                       </li>
