--- a/_includes/about.html
+++ b/_includes/about.html
@@ -16,7 +16,7 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>July'16 - Present</h4>
+                                    <h4>March'20 - Present</h4>
                                     <h4 class="subheading">Samsung R&D institue, Delhi</h4>
                                 </div>
                                 <div class="timeline-body">
@@ -32,7 +32,7 @@
                                 </div>
                                 <div class="timeline-panel">
                                     <div class="timeline-heading">
-                                        <h4>July'16 - Present</h4>
+                                        <h4>July'16 - March'20</h4>
                                         <h4 class="subheading">Samsung R&D institue, Delhi</h4>
                                     </div>
                                     <div class="timeline-body">
@@ -53,7 +53,7 @@
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
                                     <h4>January'16 - June'16</h4>
-                                    <h4 class="subheading">BlackRock</h4>
+                                    <h4 class="subheading">BlackRock, Gurugram</h4>
                                 </div>
                                 <div class="timeline-body">
                                     <p class="text-muted">Intern, Analyst</p>
@@ -68,7 +68,7 @@
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
                                     <h4>July'12 - July'16</h4>
-                                    <h4 class="subheading">Manipal Institute of Technology</h4>
+                                    <h4 class="subheading">Manipal Institute of Technology, Karnataka</h4>
                                 </div>
                                 <div class="timeline-body">
                                     <p class="text-muted">Bachelor of Technology</p>
@@ -84,7 +84,7 @@
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
                                     <h4>2010 - 2012</h4>
-                                    <h4 class="subheading">St. Joseph's School</h4>
+                                    <h4 class="subheading">St. Joseph's School, Bhagalpur</h4>
                                 </div>
                                 <div class="timeline-body">
                                     <p class="text-muted">Senior Secondary(XII)</p>
@@ -98,7 +98,7 @@
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
                                     <h4>Before 2012</h4>
-                                    <h4 class="subheading">St. Joseph's School</h4>
+                                    <h4 class="subheading">St. Joseph's School, Bhagalpur</h4>
                                 </div>
                                 <div class="timeline-body">
                                     <p class="text-muted">Metric (X)</p>
