--- a/_includes/about.html
+++ b/_includes/about.html
@@ -20,17 +20,9 @@
                                     <h4 class="subheading">Samsung R&D institue, Delhi</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Designation: <b>Lead Engineer<b></p>
-                                    <ul class="text-muted">
-                                      <li>Worked on an <b>AI based Conversational Agent</b> designed to help the customers with their queries related to Samsung products.
-                                        <ul>
-                                          <li>Contributed towards a <b>Log-Analytics Dashboard</b> development to gain insight into the conversation flows and enhance the chatbot’s effectiveness.</li>
-                                          <li>Worked on extracting <b>Key Phrases</b> from user utterances for automated evaluation of the intent classifier.</li>
-                                          <li>Created a <b>Spell Corrector</b> for correcting misspelled words in user queries while taking context into consideration.</li>
-                                          <li>Built a bilingual <b>Language Detector and Translator</b> for translating Hinglish (Hindi + English) customer queries into English.</li>
-                                        </ul>
-                                      </li>
-                                    </ul>
+                                    <p class="text-muted">Designation: Lead Engineer</p>
+                                    <p class="text-muted">Creating an automated intelligent assistant to help the customers get faster and more accurate responses to their queries related to Samsung devices.</p>
+				                            <p class="text-muted">Created a python based spell corrector for Samsung chatbot. It analyses the user’s query, corrects the mis-spelled words and overtime trains itself too to give a better and accurate response to the queries.</p>
                                 </div>
                             </div>
                         </li>
@@ -45,15 +37,11 @@
                                     </div>
                                     <div class="timeline-body">
                                         <p class="text-muted">Designation: Engineer</p>
-                                        <ul class="text-muted">
-                                          <li>Worked on an <b>AI based Conversational Agent</b> designed to help the customers with their queries related to Samsung products.
-                                            <ul>
-                                              <li>Contributed towards a <b>Log-Analytics Dashboard</b> development to gain insight into the conversation flows and enhance the chatbot’s effectiveness.</li>
-                                              <li>Worked on extracting <b>Key Phrases</b> from user utterances for automated evaluation of the intent classifier.</li>
-                                              <li>Created a <b>Spell Corrector</b> for correcting misspelled words in user queries while taking context into consideration.</li>
-                                              <li>Built a bilingual <b>Language Detector and Translator</b> for translating Hinglish (Hindi + English) customer queries into English.</li>
-                                            </ul>
-                                          </li>
+                                        <ul>
+                                          Worked on an AI based Conversational Agent designed to help the customers with their queries related to Samsung products.
+                                          <li>Contributed towards a <b>Log-Analytics Dashboard</b> development to gain insight into the conversation flows and enhance the chatbot’s effectiveness.</li>
+                                          <li>Worked on extracting <b>Key Phrases</b> from user utterances for automated evaluation of the intent classifier.</li>
+                                          <li>Created a <b>Spell Corrector</b> for correcting misspelled words in user queries while taking context into consideration.</li>
                                         </ul>
                                     </div>
                                 </div>
