--- a/_includes/about.html
+++ b/_includes/about.html
@@ -36,18 +36,16 @@
                                         <h4 class="subheading">Samsung R&D institue, Delhi</h4>
                                     </div>
                                     <div class="timeline-body">
-                                        <p class="text-muted">Designation: Engineer</p>
-                                        <ul>
-
-                                          <ul class="text-muted">
-                                            <li>Worked on an <b>AI based Conversational Agent</b> designed to help the customers with their queries related to Samsung products.
-                                              <ul>
-                                                <li>Contributed towards a <b>Log-Analytics Dashboard</b> development to gain insight into the conversation flows and enhance the chatbot’s effectiveness.</li>
-                                                <li>Worked on extracting <b>Key Phrases</b> from user utterances for automated evaluation of the intent classifier.</li>
-                                                <li>Created a <b>Spell Corrector</b> for correcting misspelled words in user queries while taking context into consideration.</li>
-                                                <li>Built a bilingual <b>Language Detector and Translator</b> for translating Hinglish (Hindi + English) customer queries into English.</li>
-                                              </ul>
-                                            </li>
+                                        <p class="text-muted">Designation: <b>Engineer</b></p>
+                                        <ul class="text-muted">
+                                          <li>Worked on an <b>AI based Conversational Agent</b> designed to help the customers with their queries related to Samsung products.
+                                            <ul>
+                                              <li>Contributed towards a <b>Log-Analytics Dashboard</b> development to gain insight into the conversation flows and enhance the chatbot’s effectiveness.</li>
+                                              <li>Worked on extracting <b>Key Phrases</b> from user utterances for automated evaluation of the intent classifier.</li>
+                                              <li>Created a <b>Spell Corrector</b> for correcting misspelled words in user queries while taking context into consideration.</li>
+                                              <li>Built a bilingual <b>Language Detector and Translator</b> for translating Hinglish (Hindi + English) customer queries into English.</li>
+                                            </ul>
+                                          </li>
                                         </ul>
                                     </div>
                                 </div>
