--- a/_includes/about.html
+++ b/_includes/about.html
@@ -19,10 +19,19 @@
                                     <h4>March'20 - Present</h4>
                                     <h4 class="subheading">Samsung R&D institue, Delhi</h4>
                                 </div>
+
                                 <div class="timeline-body">
-                                    <p class="text-muted">Designation: Lead Engineer</p>
-                                    <p class="text-muted">Creating an automated intelligent assistant to help the customers get faster and more accurate responses to their queries related to Samsung devices.</p>
-				                            <p class="text-muted">Created a python based spell corrector for Samsung chatbot. It analyses the user’s query, corrects the mis-spelled words and overtime trains itself too to give a better and accurate response to the queries.</p>
+                                    <p class="text-muted">Designation: <b>Lead Engineer</b></p>
+                                    <ul class="text-muted">
+                                      <li>Worked on an <b>AI based Conversational Agent</b> designed to help the customers with their queries related to Samsung products.
+                                        <ul style="padding-left: 10px;">
+                                          <li>Integrated the existing <b>Remote Management</b> service for TV used by live agents in chatbot.</li>
+                                          <li>Developed a hybrid(extractive+abstractive) <b>Summarization</b> technique for conversations between customer-chatbot and customer-live agent.</li>
+                                        </ul>
+                                      </li>
+                                      <li><b>Multiple Voice Assistants:</b> Implementingasmartinteractionsystemtouse different Voice Assistants with same wakeup word in Samsung TVs.</li>
+                                      <li><b>Content Moderation:</b> Worked on an audio moderation service on TV by censoring profanity in subtitles and audio for family/kids viewing.</li>
+                                    </ul>
                                 </div>
                             </div>
                         </li>
@@ -39,13 +48,16 @@
                                         <p class="text-muted">Designation: <b>Engineer</b></p>
                                         <ul class="text-muted">
                                           <li>Worked on an <b>AI based Conversational Agent</b> designed to help the customers with their queries related to Samsung products.
-                                            <ul>
+                                            <ul style="padding-left: 10px;">
                                               <li>Contributed towards a <b>Log-Analytics Dashboard</b> development to gain insight into the conversation flows and enhance the chatbot’s effectiveness.</li>
                                               <li>Worked on extracting <b>Key Phrases</b> from user utterances for automated evaluation of the intent classifier.</li>
                                               <li>Created a <b>Spell Corrector</b> for correcting misspelled words in user queries while taking context into consideration.</li>
                                               <li>Built a bilingual <b>Language Detector and Translator</b> for translating Hinglish (Hindi + English) customer queries into English.</li>
                                             </ul>
                                           </li>
+                                          <li><b>STR Autocomplete:</b> Developed a text auto completion module for Samsung Refrigerator wherein the text extracted from the images captured by the refrigerator camera is analyzed and corrected if read incorrectly or partially.</li>
+                                          <li><b>Adaptive Player:</b> Worked on an adaptive music player for automobile dashboards which customizes as per calendar events, person’s age, national holidays, weather, sports events as well as speed of the car.</li>
+                                          <li><b>Podcast:</b> Created a dynamic podcast application using Xamarin and RESTful APIs for faster responses.</li>
                                         </ul>
                                     </div>
                                 </div>
