--- a/_includes/about.html
+++ b/_includes/about.html
@@ -17,7 +17,7 @@
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
                                     <h4>March'20 - Present</h4>
-                                    <h4 class="subheading">Samsung R&D institue, Delhi</h4>
+                                    <h4 class="subheading">Samsung R&D Institute, Delhi</h4>
                                 </div>
 
                                 <div class="timeline-body">
@@ -29,7 +29,7 @@
                                           <li>Developed a hybrid(extractive+abstractive) <b>Summarization</b> technique for conversations between customer-chatbot and customer-live agent.</li>
                                         </ul>
                                       </li>
-                                      <li><b>Multiple Voice Assistants:</b> Implementingasmartinteractionsystemtouse different Voice Assistants with same wakeup word in Samsung TVs.</li>
+                                      <li><b>Multiple Voice Assistants:</b> Implemented a smart interaction system to use different Voice Assistants with same wakeup word in Samsung TVs.</li>
                                       <li><b>Content Moderation:</b> Worked on an audio moderation service on TV by censoring profanity in subtitles and audio for family/kids viewing.</li>
                                     </ul>
                                 </div>
@@ -42,7 +42,7 @@
                                 <div class="timeline-panel">
                                     <div class="timeline-heading">
                                         <h4>July'16 - March'20</h4>
-                                        <h4 class="subheading">Samsung R&D institue, Delhi</h4>
+                                        <h4 class="subheading">Samsung R&D Institute, Delhi</h4>
                                     </div>
                                     <div class="timeline-body">
                                         <p class="text-muted">Designation: <b>Engineer</b></p>
