--- a/_includes/about.html
+++ b/_includes/about.html
@@ -44,7 +44,7 @@
                                         <h4>July'16 - March'20</h4>
                                         <h4 class="subheading">Samsung R&D Institute, Delhi</h4>
                                     </div>
-                                    <div class="timeline-body">
+                                    <div class="timeline-body show-more-height">
                                         <p class="text-muted">Designation: <b>Engineer</b></p>
                                         <ul class="text-muted">
                                           <li>Worked on an <b>AI based Conversational Agent</b> designed to help the customers with their queries related to Samsung products.
@@ -60,6 +60,7 @@
                                           <li><b>Podcast:</b> Created a dynamic podcast application using Xamarin and RESTful APIs for faster responses.</li>
                                         </ul>
                                     </div>
+                                    <div class="show-more">(Show More)</div>
                                 </div>
                             </li>
                         <li class="timeline-inverted">
