--- a/_includes/about.html
+++ b/_includes/about.html
@@ -20,7 +20,7 @@
                                     <h4 class="subheading">Samsung R&D Institute, Delhi</h4>
                                 </div>
 
-                                <div class="timeline-body">
+                                <div class="timeline-body show-more-height">
                                     <p class="text-muted">Designation: <b>Lead Engineer</b></p>
                                     <ul class="text-muted">
                                       <li>Worked on an <b>AI based Conversational Agent</b> designed to help the customers with their queries related to Samsung products.
@@ -32,6 +32,7 @@
                                       <li><b>Multiple Voice Assistants:</b> Implemented a smart interaction system to use different Voice Assistants with same wakeup word in Samsung TVs.</li>
                                       <li><b>Content Moderation:</b> Worked on an audio moderation service on TV by censoring profanity in subtitles and audio for family/kids viewing.</li>
                                     </ul>
+                                    <div class="show-more">(Show More)</div>
                                 </div>
                             </div>
                         </li>
